# votepizza

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
votepizza/: manage.py  pytest.ini
votepizza/pizza/: models.py  serializers.py  urls.py  views.py
votepizza/pizza/migrations/: 0001_initial.py  0002_auto_20201011_1151.py  0003_auto_20201011_1152.py  0004_auto_20201011_1501.py  0005_pizza_toppings.py  0006_auto_20201011_1526.py  0007_pizza_price.py  0008_auto_20201012_0803.py  0009_auto_20201012_0806.py
votepizza/pizza/templatetags/: staticfiles.py
votepizza/pizza/tests/: test_models.py  test_views.py
votepizza/votepizza/: asgi.py  settings.py  urls.py  wsgi.py
